# Chess

./: .gitignore  Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  CastlingSide.h  Chess  Chess.cbp  ChessPiece.cpp  ChessPiece.h  HumanPlayer.cpp  HumanPlayer.h  Interface.cpp  Interface.h  King.cpp  King.h  Knight.cpp  Knight.h  Makefile  Move.cpp  Move.h  Pawn.cpp  Pawn.h  PieceColor.cpp  PieceColor.h  Player.cpp  Player.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  Square.cpp  Square.h  color.h  constants.h  doxygen  gridElement.cpp  gridElement.h  (+1 more)
chesspieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
html/: _bishop_8h_source.html  _board_8h_source.html  _castling_side_8h_source.html  _chess_piece_8h_source.html  _human_player_8h_source.html  _interface_8h_source.html  _king_8h_source.html  _knight_8h_source.html  _min_max_player_8h_source.html  _move_8h_source.html  _pawn_8h_source.html  _piece_color_8h_source.html  _player_8h_source.html  _queen_8h_source.html  _random_player_8h_source.html  _rook_8h_source.html  _square_8h_source.html  annotated.html  class_bishop-members.html  class_bishop.html  class_board-members.html  class_board.html  class_chess_piece-members.html  class_chess_piece.html  class_human_player-members.html  class_human_player.html  class_interface-members.html  class_interface.html  class_king-members.html  class_king.html  class_knight-members.html  class_knight.html  class_min_max_player-members.html  class_min_max_player.html  class_move-members.html  class_move.html  class_pawn-members.html  class_pawn.html  class_player-members.html  class_player.html  (+31 more)
latex/: annotated.tex  class_bishop.tex  class_board.tex  class_chess_piece.eps  class_chess_piece.tex  class_human_player.tex  class_interface.tex  class_king.tex  class_knight.tex  class_min_max_player.eps  class_min_max_player.tex  class_move.tex  class_pawn.tex  class_player.eps  class_player.tex  class_queen.tex  class_random_player.eps  (+6 more)
(+22 files in other folders)
